package main

import "fmt"

type GitRepo struct{}

type HelmCart struct{
	repoUrl string
	path string
	targetRevision string
	chart string
	name string
}



func main(){
	fmt. Println("hello")
}

